--- a/app/src/main/res/layout/cardview_contact.xml
+++ b/app/src/main/res/layout/cardview_contact.xml
@@ -53,6 +53,7 @@
         </LinearLayout>
 
         <ImageView
+            android:id="@+id/imgChat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/chat_image"
